Dependencies: Update elasticsearch, ... from 8.12.2 to 8.13.0 (#673)